--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Run training
         run: |
           docker run --rm \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_DEFAULT_REGION=us-east-1 \
             -e S3_BUCKET=${{ secrets.S3_BUCKET }} \
             -e S3_DATA_PREFIX=datasets/latest/ \
             yolo-train
